# roadrunner

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.txt  CMakeLists.txt  FUNDING.txt  README.md  azure-pipelines.yml  dxr.config  requirements.txt  windows_install.bat
plugins/: CMakeLists.txt
plugins/beta/: CMakeLists.txt
plugins/beta/parameter_scan/: psParameterScan.cpp  psParameterScan.h  psParameterScanWorker.cpp  psParameterScanWorker.h
plugins/beta/statistics/: CMakeLists.txt  stStat.cpp  stStat.h  stStatUtils.cpp  stStatWorker.cpp  stStatWorker.h
plugins/released/: CMakeLists.txt
plugins/released/auto2000/: telAutoDataParser.h  telAutoPlugin.cpp  telAutoPlugin.h  telAutoWorker.cpp  telAutoWorker.h
plugins/released/chisquare/: csChiSquare.cpp  csChiWorker.h
plugins/released/differential_evolution/: CMakeLists.txt  deDifferentialEvolution.cpp  deDifferentialEvolution.h  deObjectiveFunction.cpp  deObjectiveFunction.h  deSimplex.h  deUtils.cpp  deUtils.h  deWorker.cpp  deWorker.h
plugins/released/levenberg_marquardt/: CMakeLists.txt  lm.cpp  lmObjectiveFunction.cpp  lmUtils.cpp
plugins/released/monte_carlo_bs/: bsUtils.cpp
plugins/released/nelder_mead/: CMakeLists.txt  nmNelderMead.cpp  nmNelderMead.h  nmWorker.cpp  nmWorker.h
plugins/released/test_model/: TestModel.h
source/: ASTPreProcessor.cpp  ASTPreProcessor.h  CMakeLists.txt  CVODEIntegrator.cpp  CVODEIntegrator.h  Dictionary.h  ExecutableModelFactory.cpp  ExecutableModelFactory.h  GillespieIntegrator.cpp  GillespieIntegrator.h  IPyPickle.h  Integrator.cpp  Integrator.h  ModelGenerator.cpp  PresimulationProgramDecorator.cpp  SBMLValidator.cpp  SBMLValidator.h  Setting.h  Solver.cpp  Solver.h  SolverRegistration.cpp  Variant.cpp  Variant.h  doxygen.conf  rrConfig.cpp  rrConfig.h  rrConfigure.h.in  rrConstants.cpp  rrException.cpp  rrException.h  rrExecutableModel.h  rrModelGeneratorFactory.cpp  rrRoadRunner.cpp  rrRoadRunner.h  rrRoadRunnerData.cpp  rrRoadRunnerData.h  rrRoadRunnerOptions.cpp  rrRoadRunnerOptions.h  rrSelectionRecord.cpp  rrSelectionRecord.h  (+7 more)
source/c/: rrCModelGenerator.cpp  rrCompiledExecutableModel.cpp  rrStringList.cpp  rrStringList.h
source/conservation/: ConservedMoietyConverter.cpp
source/doxygen-templates/: header.html
source/gpu/: .GPUSimBiochemModel.cpp.kate-swp  CudaCodeCompiler.cpp  CudaCodeCompiler.hpp  CudaGenerator.cpp  CudaGenerator.hpp  CudaRKInt.cu  GPUSimBiochemModel.cpp  GPUSimBiochemModel.h  GPUSimBiochemModelSBMLImport.cpp  GPUSimCompiler.cpp  GPUSimCompiler.h  GPUSimException.h  GPUSimExecutableModel.cpp  GPUSimExecutableModel.h  GPUSimIntegrator.cpp  GPUSimIntegrator.h  GPUSimIntegratorInt.cpp  GPUSimIntegratorInt.h  GPUSimIntegratorProxy.h  GPUSimModel.cpp  GPUSimModel.h  GPUSimModel.hpp  GPUSimModelGenerator.cpp  GPUSimModelGenerator.h  GPUSimReal.h  Hasher.cpp  Hasher.hpp  ModelResources.cpp  ModelResources.h
source/gpu/bdom/: BaseTypes.cpp  BaseTypes.hpp  Expressions.cpp  Expressions.hpp  Preproc.cpp  (+5 more)
source/llvm/: ASTNodeCodeGen.cpp  ASTNodeCodeGen.h  CodeGenBase.h  EvalInitialConditionsCodeGen.cpp  EvalRateRuleRatesCodeGen.cpp  EvalReactionRatesCodeGen.cpp  FunctionResolver.cpp  GetEventValuesCodeGen.h  GetInitialValueCodeGenBase.h  GetInitialValuesCodeGen.cpp  GetInitialValuesCodeGen.h  GetPiecewiseTriggerCodeGen.cpp  GetPiecewiseTriggerCodeGen.h  GetValueCodeGenBase.h  Jit.cpp  Jit.h  JitFactory.cpp  JitFactory.h  LLJit.cpp  LLJit.h  LLVMExecutableModel.cpp  LLVMExecutableModel.h  LLVMModelData.cpp  LLVMModelData.h  LLVMModelDataSymbols.cpp  LLVMModelDataSymbols.h  LLVMModelGenerator.cpp  LLVMModelGenerator.h  LLVMModelSymbols.cpp  LLVMModelSymbols.h  LoadSymbolResolverBase.cpp  LoadSymbolResolverBase.h  MCJit.cpp  MCJit.h  ModelDataIRBuilder.cpp  ModelDataSymbolResolver.cpp  ModelDataSymbolResolver.h  ModelGeneratorContext.cpp  ModelGeneratorContext.h  ModelInitialValueSymbolResolver.cpp  (+9 more)
source/llvm_testing/: CMakeLists.txt  main.cpp
source/patterns/: AccessPtrIterator.hpp  Range.hpp
source/platform/: Backtrace.cpp  Backtrace.h  nullptr.h
source/plugins/: CMakeLists.txt
source/rrplugins/: CMakeLists.txt
source/testing/: CMakeLists.txt  CXXBrusselatorExecutableModel.cpp  CXXBrusselatorExecutableModel.h  CXXEnzymeExecutableModel.cpp  CXXEnzymeExecutableModel.h  CXXExecutableModel.cpp  CXXExecutableModel.h  CXXPiecewiseExecutableModel.cpp  CXXPiecewiseExecutableModel.h  main.cpp
test/: CMakeLists.txt  main.cpp
test/c_api_rrtests/: OtherRRTestFileTests.cpp
test/cxx_api_tests/: CMakeLists.txt  ConfigTests.cpp  SettingTests.cpp  SteadyStateSolver.cpp
test/llvm_tests/: JitFactoryTests.cpp  LLVMGeneratedFunctionTests.cpp
test/model_analysis/: model_analysis.cpp
test/model_editing/: model_editing.cpp
test/picklable-roadrunner/: CMakeLists.txt  picklable_swig_tests.py
test/plugin_auto2000/: CMakeLists.txt  PluginAuto2000Tests.cpp  PluginAuto2000Tests.h  PluginTests.cpp  auto2000.cpp  auto2000_1.cpp  auto2000_2.cpp  auto2000_3.cpp  auto2000_4.cpp
test/plugin_levenberg_marquardt/: CMakeLists.txt  PluginLevenbergMarquardtTests.cpp  PluginLevenbergMarquardtTests.h  lm_optimize.cpp  lm_optimize_1.cpp  lm_optimize_2.cpp
test/plugin_monte_carlo_bs/: CMakeLists.txt  PluginMonteCarloTests.cpp  PluginMonteCarloTests.h  mc_optimize.cpp  mc_optimize_1.cpp  mc_optimize_2.cpp  mc_optimize_3.cpp
test/plugin_nelder_mead/: CMakeLists.txt  PluginNelderMeadTests.cpp  PluginNelderMeadTests.h  nm_optimize.cpp  nm_optimize_1.cpp  nm_optimize_2.cpp
test/plugin_test_model/: CMakeLists.txt  PluginTestModelTests.cpp  PluginTestModelTests.h  model_check.cpp  model_check_1.cpp  model_check_2.cpp  model_check_3.cpp  model_check_4.cpp
test/python/: test_python_api.py  test_rrtests.py  test_runStochasticTestSuite.py  test_steadyStateSolver.py
test/sbml-test-suite/: STS.cpp  STS.h  STSTest.cpp
test/semantic_STS/: sbml_test_suite.cpp
test/serialization/: state_saving.cpp
test/sundials-tests/: CMakeLists.txt  TestModelFactory.cpp  TestModelFactory.h  TestModelFactory.i
wrappers/c_api_python/: CMakeLists.txt  test.py  test3.py  testrr.c
(+1689 files in other folders)
